Generating Report Function Added

--- a/views/reportlist.ejs
+++ b/views/reportlist.ejs
@@ -18,7 +18,7 @@
             <div class="col s12">
                 <div class="card white">
                     <div class="card-content z-depth-5 black-text">
-
+                     <h5 class="center-align">Select subject to generate report</h5>
                           <% if(typeof scodes !='undefined' ){
                             if(typeof snames !='undefined' ){ %>
                               <div class="collection">
