Removed ip from href tag

--- a/views/reportlist.ejs
+++ b/views/reportlist.ejs
@@ -25,7 +25,7 @@
                             <% for(var i = 0; i < snames.length;i++){ %>
 
 
-            <a href="http://127.0.0.1:8081/report/<%= scodes[i] %>" target="_blank" class="collection-item black-text"><%= snames[i] %></a>
+            <a href="/report/<%= scodes[i] %>" target="_blank" class="collection-item black-text"><%= snames[i] %></a>
 
 
                             <%}
