--- a/views/add-electives_2.ejs
+++ b/views/add-electives_2.ejs
@@ -9,6 +9,16 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+        input[type=number].input-number–noSpinners {
+            -moz-appearance: textfield;
+        }
+        input[type=number].input-number–noSpinners::-webkit-inner-spin-button,
+        input[type=number].input-number–noSpinners::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+    </style>
 </head>
 
 <body bgcolor="#64ffda">
@@ -87,7 +97,7 @@
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input placeholder="Enter minimum CGPA required" id="cgpa" name="cgpa" type="text" class="validate" autocomplete="off" required>
+                                    <input placeholder="Enter minimum CGPA required" id="cgpa" name="cgpa" type="number" min="0" max="10" step="0.1" class="validate input-number–noSpinners" autocomplete="off" required>
                                     <label for="cgpa">
                                         <span class="black-text">CGPA Required</span>
                                     </label>
