Edit in semreportselect.ejs

--- a/views/semreportselect.ejs
+++ b/views/semreportselect.ejs
@@ -20,7 +20,7 @@
                 <div class="card white">
                     <div class="card-content z-depth-5 black-text">
                       <div class="row">
-                          <form class="col s12" action="/sreport1" method="post" enctype="multipart/form-data">
+                          <form class="col s12" action="/sreport" method="post" enctype="multipart/form-data">
                       <div class="row">
                           <div class="input-field col s12">
                               <select autocomplete="off" name="course" id="course" required>
