Add Links Part 2

--- a/views/add-electives.ejs
+++ b/views/add-electives.ejs
@@ -35,7 +35,7 @@
                           <div class="nav-wrapper teal accent-2">
                             <ul id="nav-mobile" class="left hide-on-med-and-down">
                               <li><a class="black-text" target="_blank" href="/viewdb/">View Electives</a></li>
-                              <li><a class="black-text" target="_blank" href="">Semester-wise Report</a></li>
+                              <li><a class="black-text" target="_blank" href="/sreport/">Semester-wise Report</a></li>
                               <li><a class="black-text" target="_blank" href="/report/">Subject-wise Report</a></li>
                             </ul>
                           </div>
