--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,9 +64,16 @@
 
                                 <div class="row">
                                     <div class="input-field col s12">
-                                        <input disabled value="cs" id="branch" name="branch" type="text" class="validate">
-                                        <label for="disabled">
-                                            <span class="black-text">Branch</span>
+                                        <select autocomplete="off" name="semester" id="semester" required>
+                                            <option value="" disabled selected>Choose your semester</option>
+                                            <% if(typeof semesters !='undefined' ){ %>
+                                              <% semesters.forEach(function(semester){ %>
+                                                  <option value="<%= semester %>"><%= semester %></option>
+                                                  <% })
+                                                } %>
+                                        </select>
+                                        <label>
+                                            <span class="black-text">Semester</span>
                                         </label>
                                     </div>
                                 </div>
@@ -109,20 +116,6 @@
         $(document).ready(function() {
             $('select').material_select();
         });
-    </script>
-    <script>
-    $(document).ready(function () {
-    $("#course").change(function () {
-        var crs = $(this).val();
-        $('select').material_select('destroy');
-        if (crs == "btech") {
-            $("#semester").html("<option value='' disabled selected>Choose your semester</option><option value='5'>5</option><option value='7'>7</option>");
-        } else if (crs == "mca") {
-            $("#semester").html("<option value='' disabled selected>Choose your semester</option><option value='3'>3</option><option value='5'>5</option>");
-          }
-        $('select').material_select();
-    });
-    });
     </script>
 </body>
 
