Change In Heading

--- a/views/setadminpass.ejs
+++ b/views/setadminpass.ejs
@@ -31,7 +31,7 @@ margin-left:250px;
                       <div class="row">
                           <form class="col s12" action="/s_tapass" method="post" enctype="multipart/form-data">
                             <div class="row">
-                              <h5 class="black-text center-align">Log In</h5>
+                              <h5 class="black-text center-align">Create Admin User</h5>
                               <div class="input-field col s12">
                                 <input id="uname" name="uname" type="text" class="validate" autocomplete="off" required>
                                 <label for="uname">Username</label>
