Autocomplete For Few Fields

--- a/views/add-electives.ejs
+++ b/views/add-electives.ejs
@@ -24,7 +24,6 @@
 <body bgcolor="#64ffda">
   <div class="container center-align">
       <div class="row">
-        <h5 class="black-text center-align">Add Electives</h5>
           <div class="col s12">
               <div class="card white">
                   <div class="card-content z-depth-5 black-text">
@@ -41,7 +40,7 @@
                           </div>
                         </nav>
                       </br>
-
+                      <h5 class="black-text center-align">Add Electives</h5>
                           <form class="col s12" action="/add-data" method="post" enctype="multipart/form-data">
                             <div class="row">
                                 <div class="input-field col s12">
@@ -75,7 +74,7 @@
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input placeholder="Enter subject code" id="scode" name="scode" type="text" class="validate" autocomplete="off" required>
+                                    <input placeholder="Enter subject code" id="scode" name="scode" type="text" class="validate" required>
                                     <label for="scode">
                                         <span class="black-text">Subject Code</span>
                                     </label>
@@ -83,7 +82,7 @@
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input placeholder="Enter subject name" id="sname" name="sname" type="text" class="validate" autocomplete="off" required>
+                                    <input placeholder="Enter subject name" id="sname" name="sname" type="text" class="validate" required>
                                     <label for="sname">
                                         <span class="black-text">Subject Name</span>
                                     </label>
@@ -99,7 +98,7 @@
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input placeholder="Enter faculty name" id="fname" name="fname" type="text" class="validate" autocomplete="off" required>
+                                    <input placeholder="Enter faculty name" id="fname" name="fname" type="text" class="validate" required>
                                     <label for="fname">
                                         <span class="black-text">Faculty Name</span>
                                     </label>
