Add jquery-3.2.1.min.js To Server

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -56,8 +56,8 @@ margin-left:250px;
 </div>
 
   <!--Import jQuery before materialize.js-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.js"></script>
-  <script type="text/javascript" src="../js/materialize.js"></script>
+  <script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="../js/materialize.min.js"></script>
   <% if(typeof popupData !='undefined' ){ %>
   <script>Materialize.toast('<%= popupData %>', 3000)</script>
   <% } %>
