--- a/views/setadminpass.ejs
+++ b/views/setadminpass.ejs
@@ -62,7 +62,7 @@ margin-left:250px;
 </div>
 
   <!--Import jQuery before materialize.js-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.js"></script>
+  <script type="text/javascript" src="../js/jquery-3.2.1.js"></script>
   <script type="text/javascript" src="../js/materialize.js"></script>
   <script>
     var password = document.getElementById("password");
