--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
 
 <body bgcolor="#64ffda">
     <div class="container center-align">
-      <h2>Electives Selection App</h2>
+      <h2>Electives Selection - Monsoon Semester 2018</h2>
         <div class="row">
             <div class="col s12">
                 <div class="card white">
