--- a/views/maxelective.ejs
+++ b/views/maxelective.ejs
@@ -19,12 +19,13 @@
             <div class="col s12">
                 <div class="card white">
                     <div class="card-content z-depth-5 black-text">
-                      <h5 class="center-align">No Data To Display</h5>
+                      <h5 class="center-align">Maximum Limit Exceeded! Try again</h5>
                     </br>
                       <div class="center-align">
                        <a href="/" class="btn waves-effect waves-light">Home</a>
                      </div>
                     </div>
+
                 </div>
             </div>
         </div>
