--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,11 +66,6 @@
                                     <div class="input-field col s12">
                                         <select autocomplete="off" name="semester" id="semester" required>
                                             <option value="" disabled selected>Choose your semester</option>
-                                            <% if(typeof semesters !='undefined' ){ %>
-                                              <% semesters.forEach(function(semester){ %>
-                                                  <option value="<%= semester %>"><%= semester %></option>
-                                                  <% })
-                                                } %>
                                         </select>
                                         <label>
                                             <span class="black-text">Semester</span>
@@ -104,6 +99,20 @@
             $('select').material_select();
         });
     </script>
+    <script>
+    $(document).ready(function () {
+    $("#course").change(function () {
+        var crs = $(this).val();
+        $('select').material_select('destroy');
+        if (crs == "btech") {
+            $("#semester").html("<option value='' disabled selected>Choose your semester</option><option value='5'>5</option><option value='7'>7</option>");
+        } else if (crs == "mca") {
+            $("#semester").html("<option value='' disabled selected>Choose your semester</option><option value='3'>3</option><option value='5'>5</option>");
+          }
+        $('select').material_select();
+    });
+    });
+    </script>    
 </body>
 
 </html>
