Add Home Button

--- a/views/printreg.ejs
+++ b/views/printreg.ejs
@@ -37,6 +37,7 @@
                              </ul>
                              </font><br />
                              <div class="center-align">
+                              <a href="/" class="btn waves-effect waves-light">Home</a>
                               <button class="btn waves-effect waves-light" onclick="printData()">Print
                               </button>
 
