Thank You Toast

--- a/views/printreg.ejs
+++ b/views/printreg.ejs
@@ -49,6 +49,7 @@
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="../js/materialize.min.js"></script>
+    <script>Materialize.toast('Thank you for registering', 10000)</script>
     <script>
 function printData() {
     window.print();
