--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
                                     </div>
                                 </div>
 
-                                <div class="row">
+                                <!--<div class="row">
                                     <div class="input-field col s12">
                                         <select autocomplete="off" name="course" id="course" required>
                                             <option value="" disabled selected>Choose your course</option>
@@ -60,9 +60,20 @@
                                             <span class="black-text">Course</span>
                                         </label>
                                     </div>
-                                </div>
+                                </div>-->
 
                                 <div class="row">
+                                    <div class="input-field col s12">
+                                        <select autocomplete="off" name="course" id="course" required>
+                                            <option value="btech">BTech</option>
+                                        </select>
+                                        <label>
+                                            <span class="black-text">Programmes</span>
+                                        </label>
+                                    </div>
+                                </div>
+
+                                <!--<div class="row">
                                     <div class="input-field col s12">
                                         <select autocomplete="off" name="semester" id="semester" required>
                                             <option value="" disabled selected>Choose your semester</option>
@@ -71,16 +82,29 @@
                                             <span class="black-text">Semester</span>
                                         </label>
                                     </div>
-                                </div>
+                                </div>-->
 
                                 <div class="row">
+                                  <div class="input-field col s12">
+                                    <select autocomplete="off" name="semester" id="semester" required>
+                                      <option value="" disabled selected>Choose your semester</option>
+                                      <option value="5">5</option>
+                                      <option value="7">7</option>
+                                    </select>
+                                    <label>
+                                        <span class="black-text">Semester</span>
+                                    </label>
+                                    </div>
+                                  </div>
+
+                                <!--<div class="row">
                                     <div class="input-field col s12">
                                         <input placeholder="Enter cgpa" id="cgpa" name="cgpa" type="number" min="0" max="10" step="0.01" class="validate input-number–noSpinners" autocomplete="off" required>
                                         <label for="cgpa">
                                             <span class="black-text">CGPA</span>
                                         </label>
                                     </div>
-                                </div>
+                                </div>-->
 
                                 <button class="btn waves-effect waves-light" type="submit">Submit
                                 </button>
@@ -99,7 +123,7 @@
             $('select').material_select();
         });
     </script>
-    <script>
+    <!--<script>
     $(document).ready(function () {
     $("#course").change(function () {
         var crs = $(this).val();
@@ -112,7 +136,7 @@
         $('select').material_select();
     });
     });
-    </script>    
+  </script>-->
 </body>
 
 </html>
