--- a/views/reportprint.ejs
+++ b/views/reportprint.ejs
@@ -28,7 +28,7 @@
            <th>Roll No</th>
            <th>Course</th>
            <th>Semester</th>
-           <th>CGPA</th>
+           <!--<th>CGPA</th>-->
            <th>Slot</th>
        </tr>
      </thead>
@@ -40,7 +40,6 @@
          <td><%= reportData.rollno %></td>
          <td><%= reportData.course %></td>
          <td><%= reportData.semester %></td>
-         <td><%= reportData.cgpa %></td>
          <td><%= reportData.slot.toUpperCase(); %></td>
        </tr>
        <% }) %>
