--- a/views/semreportprint.ejs
+++ b/views/semreportprint.ejs
@@ -26,7 +26,7 @@
        <tr>
            <th>Name</th>
            <th>Roll No</th>
-           <th>CGPA</th>
+           <!--<th>CGPA</th>-->
            <th>Subject</th>
            <th>Slot</th>
        </tr>
@@ -37,7 +37,6 @@
        <tr>
          <td><%= reportData.name %></td>
          <td><%= reportData.rollno %></td>
-         <td><%= reportData.cgpa %></td>
          <td><%= reportData.sname %></td>
          <td><%= reportData.slot.toUpperCase(); %></td>
        </tr>
