--- a/views/viewdb.ejs
+++ b/views/viewdb.ejs
@@ -30,7 +30,7 @@
            <th>Subject</th>
            <th>Code</th>
            <th>Faculty</th>
-	   <th>Min. CGPA</th>
+	   <!--<th>Min. CGPA</th>-->
 	   <th>No. of Seats</th>
 	   <th>Prerequisites</th>
        </tr>
@@ -45,7 +45,6 @@
          <td><%= reportData.sname %></td>
          <td><%= reportData.scode.toUpperCase(); %></td>
          <td><%= reportData.sfac %></td>
-	 <td><%= reportData.cgpa %></td>
 	 <td><%= reportData.count %></td>
 	 <td><%= reportData.req %></td>
        </tr>
