--- a/views/add-electives.ejs
+++ b/views/add-electives.ejs
@@ -112,14 +112,14 @@
                                     </label>
                                 </div>
                             </div>
-                            <div class="row">
+                            <!--<div class="row">
                                 <div class="input-field col s12">
                                     <input placeholder="Enter minimum CGPA required" id="cgpa" name="cgpa" type="number" min="0" max="10" step="0.01" class="validate input-number–noSpinners" autocomplete="off" required>
                                     <label for="cgpa">
                                         <span class="black-text">CGPA Required</span>
                                     </label>
                                 </div>
-                            </div>
+                            </div>-->
                             <div class="row">
                                 <div class="input-field col s12">
                                     <input placeholder="Enter prerequisites if any" id="req" name="req" type="text" class="validate" autocomplete="off">
