--- a/views/add-electives.ejs
+++ b/views/add-electives.ejs
@@ -42,7 +42,7 @@
                       </br>
                       <h5 class="black-text center-align">Add Electives</h5>
                           <form class="col s12" action="/add-data" method="post" enctype="multipart/form-data">
-                            <div class="row">
+                            <!--<div class="row">
                                 <div class="input-field col s12">
                                     <select autocomplete="off" name="course" id="course" required>
                                         <option value="" disabled selected>Choose your course</option>
@@ -53,15 +53,24 @@
                                         <span class="black-text">Course</span>
                                     </label>
                                 </div>
+                            </div>-->
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <select autocomplete="off" name="course" id="course" required>
+                                        <option value="btech">BTech</option>
+                                    </select>
+                                    <label>
+                                        <span class="black-text">Programmes</span>
+                                    </label>
+                                </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
                                     <select autocomplete="off" name="semester" id="semester" required>
                                         <option value="" disabled selected>Choose your semester</option>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
+                                        <!--<option value="2">2</option>
                                         <option value="3">3</option>
-                                        <option value="4">4</option>
+                                        <option value="4">4</option>-->
                                         <option value="5">5</option>
                                         <option value="6">6</option>
                                         <option value="7">7</option>
