--- a/views/semreportselect.ejs
+++ b/views/semreportselect.ejs
@@ -21,7 +21,7 @@
                     <div class="card-content z-depth-5 black-text">
                       <div class="row">
                           <form class="col s12" action="/sreport" method="post" enctype="multipart/form-data">
-                      <div class="row">
+                      <!--<div class="row">
                           <div class="input-field col s12">
                               <select autocomplete="off" name="course" id="course" required>
                                   <option value="" disabled selected>Choose your course</option>
@@ -30,6 +30,16 @@
                               </select>
                               <label>
                                   <span class="black-text">Course</span>
+                              </label>
+                          </div>
+                      </div>-->
+                      <div class="row">
+                          <div class="input-field col s12">
+                              <select autocomplete="off" name="course" id="course" required>
+                                  <option value="btech">BTech</option>
+                              </select>
+                              <label>
+                                  <span class="black-text">Programmes</span>
                               </label>
                           </div>
                       </div>
