Fixed Error In Faculty Name (Add Elective)

--- a/views/add-electives.ejs
+++ b/views/add-electives.ejs
@@ -107,8 +107,8 @@
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input placeholder="Enter faculty name" id="fname" name="fname" type="text" class="validate" required>
-                                    <label for="fname">
+                                    <input placeholder="Enter faculty name" id="sfac" name="sfac" type="text" class="validate" required>
+                                    <label for="sfac">
                                         <span class="black-text">Faculty Name</span>
                                     </label>
                                 </div>
