--- a/views/electives.ejs
+++ b/views/electives.ejs
@@ -20,7 +20,11 @@
                 <div class="card white">
                     <div class="card-content z-depth-5 black-text">
                       <% if(typeof max !='undefined' ){ %>
+                        <% if(secret.semester == 7){ %>
+                        <p class="center-align"><b>Maximum Electives You Can Select: <%= max %> ( <%= max-1 %> Elective and 1 Global Elective )</b></p>
+                        <% } else { %>
                         <p class="center-align"><b>Maximum Electives You Can Select: <%= max %></b></p>
+                        <% } %>
                         <% } %>
                         <form action="/registered" method="post" enctype="multipart/form-data">
                           <% let slotOld = null %>
