Changed RollNo Format

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,9 +40,18 @@
                                         </label>
                                     </div>
                                 </div>
-                                <div class="row">
+                                <!--<div class="row">
                                     <div class="input-field col s12">
                                         <input placeholder="Enter rollno" id="rollno" name="rollno" type="text" class="validate" autocomplete="off" required pattern="(m|M|B|b)(11|12|13|14|15|16|17)\d{4}(cs|CS|ca|CA)">
+                                        <label for="rollno">
+                                            <span class="black-text">Roll No</span>
+                                        </label>
+                                    </div>
+                                </div>-->
+
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <input placeholder="Enter rollno" id="rollno" name="rollno" type="text" class="validate" autocomplete="off" required pattern="(B|b)(11|12|13|14|15|16|17)\d{4}(cs|CS|Cs)">
                                         <label for="rollno">
                                             <span class="black-text">Roll No</span>
                                         </label>
